--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
 - babel=1.3=py27_0
 - cairo=1.12.18=4
 - certifi=14.05.14=py27_0
+- coverage=3.7.1=py27_0
 - docutils=0.12=py27_0
 - enum34=1.0.4=py27_0
 - fontconfig=2.11.1=4
@@ -27,7 +28,8 @@ dependencies:
 - numba=0.19.1=np19py27_0
 - numpy=1.9.2=py27_0
 - openssl=1.0.1k=1
-- pip=7.0.1=py27_0
+- pandas=0.16.1=np19py27_0
+- pip=7.0.3=py27_0
 - pixman=0.26.2=0
 - poliastro=0.3.0=np19py27_1
 - ptyprocess=0.4=py27_0
@@ -60,5 +62,7 @@ dependencies:
 - zlib=1.2.8=0
 - pip:
   - backports.ssl-match-hostname==3.4.0.2
+  - cov-core==1.15.0
+  - pytest-cov==1.8.1
   - sphinx-rtd-theme==0.1.7
 
